--- a/util/abc.html
+++ b/util/abc.html
@@ -1,16 +1,14 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
     <style>
       :root {
         --pink-darker: hsl(342, 92%, 47%);
@@ -41,6 +39,7 @@
           Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
         margin: 0;
         padding: 0;
+        font-style: normal;
       }
       *:focus,
       *:active {
@@ -208,30 +207,30 @@
         color: var(--pink-darker);
       }
     </style>
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
     <div>
       <div class="top">
         <div class="from">
           <div class="logo">
-            <img src="./public/l.png" width="210" />
+            <img src="" width="210" />
           </div>
           <div class="inputs">
-            <h1>My Company</h1>
+            <h1>fdsadfas</h1>
             <div>
-              <h4>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</h4>
+              <h4>Address: </h4>
               <p>
-                Lorem ipsum dolor ipsum dolor si ipsum dolor si ipsum dolor sisit amet consectetur
-                adipisicing elit. Itaque ipsum id iste?
+                dfasdfas
               </p>
             </div>
             <div>
-              <h4>E-mail&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</h4>
-              <p>rafsanamin2050@gmail.com</p>
+              <h4>E-mail: </h4>
+              <p>dasdasfasdf</p>
             </div>
             <div>
-              <h4>Retailer ID&nbsp;&nbsp;:</h4>
-              <p>12506546548</p>
+              <h4>Retailer Id.: </h4>
+              <p>8358279750</p>
             </div>
           </div>
         </div>
@@ -243,8 +242,8 @@
               <h4>Invoice Date:</h4>
             </div>
             <div>
-              <p>02654654654</p>
-              <p>12 Aug, 2022</p>
+              <p>2521895539</p>
+              <p></p>
             </div>
           </div>
         </div>
@@ -254,23 +253,22 @@
         <div class="inputsUD">
           <div>
             <h4>Client Name</h4>
-            <p>Mr. John Smith</p>
+            <p>dasffff</p>
           </div>
           <div>
             <h4>Client Id</h4>
-            <p>A98179871</p>
+            <p>8752755785</p>
           </div>
           <div>
             <h4>E-mail</h4>
-            <p>john_von@mon.com</p>
+            <p>dasdadad</p>
           </div>
         </div>
         <div class="inputsUD sp">
           <div>
             <h4>Address</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sint nemo facilis
-              nostrum, itaque earum.
+              fsdaaaaa
             </p>
           </div>
         </div>
@@ -303,66 +301,48 @@
             <p>Total Price</p>
           </div>
         </div>
-        <div class="item">
+        
+          <div class="item">
           <div>
-            <p style="text-align: left">Product Description</p>
+            <p style="text-align: left">dfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfas</p>
           </div>
 
-          <img src="./public/tunibibi-2x-225x58.png" alt="" />
+          <img src="undefined" alt="" />
 
           <div>
-            <p>100</p>
+            <p>52</p>
           </div>
           <div>
-            <p>Pcs</p>
+            <p></p>
           </div>
           <div>
-            <p>$1500</p>
+            <p>$ 15800</p>
           </div>
           <div>
-            <p>$15000</p>
+            <p>$ 821600</p>
           </div>
         </div>
-        <div class="item">
+          <div class="item">
           <div>
-            <p style="text-align: left">Product Description</p>
+            <p style="text-align: left">dasfafdfasa</p>
           </div>
 
-          <img src="./public/tunibibi-2x-225x58.png" alt="" />
+          <img src="undefined" alt="" />
 
           <div>
-            <p>100</p>
+            <p>522</p>
           </div>
           <div>
-            <p>Pcs</p>
+            <p></p>
           </div>
           <div>
-            <p>$1500</p>
+            <p>$ 150</p>
           </div>
           <div>
-            <p>$15000</p>
+            <p>$ 78300</p>
           </div>
         </div>
-        <div class="item">
-          <div>
-            <p style="text-align: left">Product Description</p>
-          </div>
 
-          <img src="./public/tunibibi-2x-225x58.png" alt="" />
-
-          <div>
-            <p>100</p>
-          </div>
-          <div>
-            <p>Pcs</p>
-          </div>
-          <div>
-            <p>$1500</p>
-          </div>
-          <div>
-            <p>$15000</p>
-          </div>
-        </div>
       </div>
       <div class="bottom">
         <div class="left">
@@ -370,10 +350,7 @@
             <div>
               <h4>Terms & Conditions</h4>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eius, quasi
-                deleniti nemo quae voluptatem minima eos id, nihil suscipit, obcaecati porro
-                perferendis sint. Cumque fugiat perspiciatis explicabo culpa veniam at rem deserunt,
-                maxime omnis facere ad accusantium nihil nulla eos blanditiis excepturi quibusdam
+               dasfa
               </p>
             </div>
           </div>
@@ -381,10 +358,7 @@
             <div>
               <h4>Notes</h4>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eius, quasi
-                deleniti nemo quae voluptatem minima eos id, nihil suscipit, obcaecati porro
-                perferendis sint. Cumque fugiat perspiciatis explicabo culpa veniam at rem deserunt,
-                maxime omnis facere ad accusantium nihil nulla eos blanditiis excepturi quibusdam
+                fdsds
               </p>
             </div>
           </div>
@@ -393,15 +367,15 @@
           <div class="ainputs b">
             <div>
               <h3>Total:</h3>
-              <h3>Discount:</h3>
-              <h3>Tax (15%):</h3>
+              <h3>Discount  (15%):</h3>
+              <h3>Tax :</h3>
               <h1>Net Total:</h1>
             </div>
             <div>
-              <p>$1500</p>
-              <p>$150</p>
-              <p>$150</p>
-              <h1 style="color: #000; text-align: right">$15000000000000</h1>
+              <p>$ 899900</p>
+              <p>$ 134985</p>
+              <p>$ 150</p>
+              <h1 style="color: #000; text-align: right">$ 765065</h1>
             </div>
           </div>
         </div>
